address a z-index issue where the dropdown would appear under the preview area

--- a/sites/fast-component-explorer/app/css/style.css
+++ b/sites/fast-component-explorer/app/css/style.css
@@ -89,6 +89,7 @@ html::-webkit-scrollbar-thumb {
 
 .menu-bar {
     grid-row-start: 1;
+    z-index: 1;
 }
 
 .canvas-menu-bar {
